back/src/main/java/br/com/duck/compilador/parser/Compilador.java
/* Compilador.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Compilador.java */
package br.com.duck.compilador.parser;
import java.util.ArrayList;
import java.util.List;

import br.com.duck.compilador.recovery.*;

public class Compilador/*@bgen(jjtree)*/implements CompiladorTreeConstants, CompiladorConstants {/*@bgen(jjtree)*/
  protected static JJTCompiladorState jjtree = new JJTCompiladorState();
//  public static CompilationError errors = new CompilationError();
  public static List<String> errors = new ArrayList<String>();
  public static void main(String args []) throws ParseException, ParseEOFException, Exception
  {

    Compilador parser = new Compilador(System.in);
    while (true)
    {
//      System.out.println("QUACK QUACK FALA A BOA: \n- >");

      SimpleNode node = Compilador.Start();
      node.dump(" ");

      try
      {
        //Compilador.Start();
      }
      catch (Exception e)
      {
        System.out.println("Erro de quckila\u00e7\u00e3o: ");
        System.out.println(e.getMessage());
        
        Compilador.ReInit(System.in);
        throw e;
      }
//      catch (Error e)
//      {
//        System.out.println("Erro quacktal: ");
//        System.out.println(e.getMessage());
//        break;
//      }
    }
  }

  static public String im(int x)
  {
    int k;
        String s;
    s = tokenImage[x];
    k = s.lastIndexOf("\"");
    try {
      s = s.substring(1,k);
    }
   catch (StringIndexOutOfBoundsException e)
           {}
   return s;
  }

  static Token lastError = null;
  static boolean eof;    // variável que indica se EOF foi alcançado

  // o método abaixo consome tokens até alcançar um que pertença ao conjunto
  // de sincronização
  static void consumeUntil(RecoverySet g,
                         ParseException e,
                         String met) throws ParseEOFException,
                                            ParseException
  {

        Token tok;
        System.out.println();
        System.out.println("*** " + met + " ***");
        System.out.println("     Conjunto de sincroniza\u00e7\u00e3o: " + g);

        errors.add("*** " + met + " ***");
        errors.add("     Conjunto de sincroniza\u00e7\u00e3o: " + g);

        if (g == null) throw e; // se o conjunto é null, propaga a exceção

        tok = getToken(1); // pega token corrente
        while ( ! eof ) { // se não chegou ao fim do arquivo
          if ( g.contains(tok.kind)) {//achou um token no conjunto

                errors.add("     Encontrado token de sincroniza\u00e7\u00e3o: " +
                               im(tok.kind));

            System.out.println("     Encontrado token de sincroniza\u00e7\u00e3o: " +
                               im(tok.kind));
            break;
          }

          errors.add("     Ignorando o token: " + im(tok.kind));

          System.out.println("     Ignorando o token: " + im(tok.kind));
          getNextToken();     // pega próximo token       
      tok = getToken(1);
          if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?   
              eof = true;
        }
    if ( tok != lastError)  {
      errors.add(e.getMessage());
          System.out.println(e.getMessage());
          lastError = tok;

        }
        if ( eof )
          throw new ParseEOFException("Encontrei EOF onde n\u00e3o deveria.");
  }

  static final public void Semicolon() throws ParseException, ParseEOFException {/*@bgen(jjtree) Semicolon */
 SimpleNode jjtn000 = new SimpleNode(JJTSEMICOLON);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.semicolon;
    try {
      try {
        jj_consume_token(SEMICOLON);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Semicolon");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Identifier() throws ParseException, ParseEOFException {/*@bgen(jjtree) Identifier */
 SimpleNode jjtn000 = new SimpleNode(JJTIDENTIFIER);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.identifier;
    try {
      try {
        jj_consume_token(ID);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Identifier");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Assign() throws ParseException, ParseEOFException {/*@bgen(jjtree) Assign */
 SimpleNode jjtn000 = new SimpleNode(JJTASSIGN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.assign;
    try {
      try {
        jj_consume_token(ASSIGN);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Assign");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Comma() throws ParseException, ParseEOFException {/*@bgen(jjtree) Comma */
 SimpleNode jjtn000 = new SimpleNode(JJTCOMMA);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.comma;
    try {
      try {
        jj_consume_token(COMMA);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Comma");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void OpenParen() throws ParseException, ParseEOFException {/*@bgen(jjtree) OpenParen */
 SimpleNode jjtn000 = new SimpleNode(JJTOPENPAREN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.openParen;
    try {
      try {
        jj_consume_token(OPEN_PAREN);
      } catch (ParseException e) {
consumeUntil(sinc, e, "OpenParen");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void CloseParen() throws ParseException, ParseEOFException {/*@bgen(jjtree) CloseParen */
 SimpleNode jjtn000 = new SimpleNode(JJTCLOSEPAREN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.closeParen;
    try {
      try {
        jj_consume_token(CLOSE_PAREN);
      } catch (ParseException e) {
consumeUntil(sinc, e, "CloseParen");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void OpenCurly() throws ParseException, ParseEOFException {/*@bgen(jjtree) OpenCurly */
 SimpleNode jjtn000 = new SimpleNode(JJTOPENCURLY);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.openCurly;
    try {
      try {
        jj_consume_token(OPEN_CURLY);
      } catch (ParseException e) {
consumeUntil(sinc, e, "OpenCurly");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void CloseCurly() throws ParseException, ParseEOFException {/*@bgen(jjtree) CloseCurly */
 SimpleNode jjtn000 = new SimpleNode(JJTCLOSECURLY);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.closeCurly;
    try {
      try {
        jj_consume_token(CLOSE_CURLY);
      } catch (ParseException e) {
consumeUntil(sinc, e, "CloseCurly");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void IfT() throws ParseException, ParseEOFException {/*@bgen(jjtree) IfT */
 SimpleNode jjtn000 = new SimpleNode(JJTIFT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.ifT;
    try {
      try {
        jj_consume_token(IF);
      } catch (ParseException e) {
consumeUntil(sinc, e, "IfT");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void ElseT() throws ParseException, ParseEOFException {/*@bgen(jjtree) ElseT */
 SimpleNode jjtn000 = new SimpleNode(JJTELSET);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.elseT;
    try {
      try {
        jj_consume_token(ELSE);
      } catch (ParseException e) {
consumeUntil(sinc, e, "ElseT");
      }
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
}

  static final public void ElseIfT() throws ParseException, ParseEOFException {/*@bgen(jjtree) ElseIfT */
 SimpleNode jjtn000 = new SimpleNode(JJTELSEIFT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.elseIfT;
    try {
      try {
        jj_consume_token(ELSEIF);
      } catch (ParseException e) {
consumeUntil(sinc, e, "ElseIfT");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void While() throws ParseException, ParseEOFException {/*@bgen(jjtree) While */
 SimpleNode jjtn000 = new SimpleNode(JJTWHILE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.whileT;
    try {
      try {
        jj_consume_token(WHILE);
      } catch (ParseException e) {
consumeUntil(sinc, e, "WhileT");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void For() throws ParseException, ParseEOFException {/*@bgen(jjtree) For */
 SimpleNode jjtn000 = new SimpleNode(JJTFOR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.forT;
    try {
      try {
        jj_consume_token(FOR);
      } catch (ParseException e) {
consumeUntil(sinc, e, "ForT");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Int() throws ParseException, ParseEOFException {/*@bgen(jjtree) Int */
 SimpleNode jjtn000 = new SimpleNode(JJTINT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.intT;
    try {
      try {
        jj_consume_token(INT);
      } catch (ParseException e) {
consumeUntil(sinc, e, "IntT");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Float() throws ParseException, ParseEOFException {/*@bgen(jjtree) Float */
 SimpleNode jjtn000 = new SimpleNode(JJTFLOAT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.floatT;
    try {
      try {
        jj_consume_token(FLOAT);
      } catch (ParseException e) {
consumeUntil(sinc, e, "FloatT");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void String() throws ParseException, ParseEOFException {/*@bgen(jjtree) String */
 SimpleNode jjtn000 = new SimpleNode(JJTSTRING);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.stringT;
    try {
      try {
        jj_consume_token(STRING);
      } catch (ParseException e) {
consumeUntil(sinc, e, "StringT");
      }
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
}

  static final public void Or() throws ParseException, ParseEOFException {/*@bgen(jjtree) Or */
 SimpleNode jjtn000 = new SimpleNode(JJTOR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.or;
    try {
      try {
        jj_consume_token(OR);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Or");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void And() throws ParseException, ParseEOFException {/*@bgen(jjtree) And */
 SimpleNode jjtn000 = new SimpleNode(JJTAND);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.and;
    try {
      try {
        jj_consume_token(AND);
      } catch (ParseException e) {
consumeUntil(sinc, e, "And");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Equals() throws ParseException, ParseEOFException {/*@bgen(jjtree) Equals */
 SimpleNode jjtn000 = new SimpleNode(JJTEQUALS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.equals;
    try {
      try {
        jj_consume_token(EQUALS);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Equals");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void LessThan() throws ParseException, ParseEOFException {/*@bgen(jjtree) LessThan */
 SimpleNode jjtn000 = new SimpleNode(JJTLESSTHAN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.lessThan;
    try {
      try {
        jj_consume_token(LESS_THAN);
      } catch (ParseException e) {
consumeUntil(sinc, e, "LessThan");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void GreaterThan() throws ParseException, ParseEOFException {/*@bgen(jjtree) GreaterThan */
 SimpleNode jjtn000 = new SimpleNode(JJTGREATERTHAN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.greaterThan;
    try {
      try {
        jj_consume_token(GREATER_THAN);
      } catch (ParseException e) {
consumeUntil(sinc, e, "GreaterThan");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Plus() throws ParseException, ParseEOFException {/*@bgen(jjtree) Plus */
 SimpleNode jjtn000 = new SimpleNode(JJTPLUS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.plus;
    try {
      try {
        jj_consume_token(PLUS);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Plus");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Minus() throws ParseException, ParseEOFException {/*@bgen(jjtree) Minus */
 SimpleNode jjtn000 = new SimpleNode(JJTMINUS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.minus;
    try {
      try {
        jj_consume_token(MINUST);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Minus");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Times() throws ParseException, ParseEOFException {/*@bgen(jjtree) Times */
 SimpleNode jjtn000 = new SimpleNode(JJTTIMES);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.times;
    try {
      try {
        jj_consume_token(TIMES);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Times");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Divided() throws ParseException, ParseEOFException {/*@bgen(jjtree) Divided */
 SimpleNode jjtn000 = new SimpleNode(JJTDIVIDED);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.divided;
    try {
      try {
        jj_consume_token(DIVIDED);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Divided");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Number() throws ParseException, ParseEOFException  {/*@bgen(jjtree) Number */
 SimpleNode jjtn000 = new SimpleNode(JJTNUMBER);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.number;
    try {
      try {
        jj_consume_token(NUM);
      } catch (ParseException e) {
consumeUntil(sinc, e, "Number");
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public SimpleNode Start() throws ParseException, ParseEOFException {/*@bgen(jjtree) Start */
 SimpleNode jjtn000 = new SimpleNode(JJTSTART);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.start;
    try {
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IF:
          case WHILE:
          case FOR:
          case INT:
          case FLOAT:
          case STRING:
          case ID:{
            ;
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          Statement();
        }
        jj_consume_token(EOF_TOKEN);
{if ("" != null) return jjtn000;}
      } catch (ParseException e) {
consumeUntil(sinc, e, "Start");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Instrução de retorno ausente na função");
}

  static final public void Statement() throws ParseException {/*@bgen(jjtree) Statement */
 SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.statement;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case FLOAT:
        case STRING:{
          VariableDeclaration();
          break;
          }
        case ID:{
          Assignment();
          break;
          }
        case IF:{
          Conditional();
          break;
          }
        case WHILE:
        case FOR:{
          Loop();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Semicolon();
      } catch (ParseException e) {
consumeUntil(sinc, e, "Statement");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void VariableDeclaration() throws ParseException {/*@bgen(jjtree) VariableDeclaration */
 SimpleNode jjtn000 = new SimpleNode(JJTVARIABLEDECLARATION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.variableDeclaration;
    try {
      try {
        Type();
        VariableDeclarations();
      } catch (ParseException e) {
consumeUntil(sinc, e, "VariableDeclaration");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}
